--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
     <aside>
         <h1>O que Torna a IPI relevante?</h1>
         <nav>
-            <div id="cx1">Desde 1905 oferece curso teologico</div>
-            <div id="cx2">Unica Regra de Fe e Pratica</div>
-            <div id="cx3">Contra toda e qualquer sociedade secreta</div>
-            <div id="cx4">Conteporaneidade dos dons</div>
-            <div id="cx5">Uma Igreja Igualitaria</div>
-            <div id="cx6">Ora 24hrs por dia</div>
-            <div id="cx7">Primeira a odernar mulheresa</div>
-            <div id="cx8">Possui o jornal evangelico mais antigo do brasil</div>
+            <div id="cx1" class="cx"><a href="#">Desde 1905 oferece curso teologico</a></div>
+            <div id="cx2" class="cx"><a href="#">Unica Regra de Fe e Pratica</a></div>
+            <div id="cx3" class="cx"><a href="#">Contra toda e qualquer sociedade secreta</a></div>
+            <div id="cx4" class="cx"><a href="#">Conteporaneidade dos dons</a></div>
+            <div id="cx5" class="cx"><a href="#">Uma Igreja Igualitaria</a></div>
+            <div id="cx6" class="cx"><a href="#">Ora 24hrs por dia</a></div>
+            <div id="cx7" class="cx"><a href="#">Primeira a odernar mulheresa</a></div>
+            <div id="cx8" class="cx"><a href="#">Possui o jornal evangelico mais antigo do brasil</a></div>
         </nav>
         <h1>Nossa Identidade</h1>
         <p>A IPIB sonhava com uma igreja feita por brasileiros, para os brasileiros.</p>
-        <div id="adoracao">
+        <div id="adoracao" class="card">
             <h1>Nossa adoração a Deus é</h1>
             <p>multifacetada em cultos tradicionais em algumas de nossas igrejas e em cultos contemporâneos em outras igrejas. Cremos na ação multiforme da graça de Deus em nosso meio
                 (1 Pedro 4.10-11).</p>
         </div>
-        <div id="tarefa">
+        <div id="tarefa" class="card">
             <h1>Nossa tarefa de anunciar</h1>
             <p>o Evangelho transformador de Jesus Cristo (Romanos 1.16) se baseia em nossa fidelidade às Escrituras Sagradas e na evidência do nosso testemunho cristão perante a sociedade
                 (2 Coríntios 5.17).
             </p>
         </div>
-        <div id="empenho">
+        <div id="empenho" class="card">
             <h1>Nosso empenho em promover</h1>
             <p>o aperfeiçoamento do ser humano é estabelecido no discipulado (Mateus 28.19-20), a partir do estudo e da aplicação da Bíblia à vida das pessoas, observando a ação sobrenatural do Espírito Santo no processo de santificação das pessoas
                 (1 Tessalonicenses 4.3).
