--- a/menu-hamburguer/index.html
+++ b/menu-hamburguer/index.html
@@ -33,7 +33,7 @@
             if (itens.style.display =='block'){
                 itens.style.display='none'
             }else{
-                itens.style.display='bloc'
+                itens.style.display='block'
             }
         }
     </script>
