--- a/tela_login/index.html
+++ b/tela_login/index.html
@@ -16,11 +16,11 @@
         <form action="">
             <h1>Login</h1>
             <div class="input-box">
-                <input type="email" placeholder="Usuario">
+                <input type="email" placeholder="Usuario" id="user">
                 <i class="bx bxs-user" ></i>
             </div>
             <div class="input-box">
-                <input type="password" name="" id="" placeholder="Senha">
+                <input type="password" name="" id="senha" placeholder="Senha">
                 <i class="bx bxs-lock-alt" ></i>
             </div>
             <div class="remember-forgot">
@@ -29,8 +29,9 @@
                 </label>
                 <a href="#">Esqueci Senha</a>
             </div>
-            <button type="submit" class="login" > Login</button>
+            <button type="submit" class="login" onclick="logar()" > Login</button>
         </form>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
